--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@
     box-shadow: 0 0 22px rgba(163, 163, 163, 0.4); 
     border-color: rgba(255, 255, 255, 0);
 }
-.img1{
+/*.img1{
     width: 450px;
-    margin-left: 140px;
-    margin-right: 160px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 5%;
-}
+}*/
 .img2{
     width: 450px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     border-radius: 5%;
